--- a/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/primary.fxml
+++ b/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/primary.fxml
@@ -16,6 +16,7 @@
             <Button fx:id="primaryButton" onAction="#switchToSecondary" text="Switch to Secondary View" />
             <Button mnemonicParsing="false" onAction="#addDir" text="Add Directory to Worklist" />
             <Button mnemonicParsing="false" onAction="#addFiles" text="Add File(s) to Worklist" />
+            <Button mnemonicParsing="false" onAction="#convert" text="Run!" />
         </items>
       </ToolBar>
    </top>
