--- a/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/primary.fxml
+++ b/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/primary.fxml
@@ -71,6 +71,8 @@
                               <Label text="Use Native STP Parser (experimental)" GridPane.rowIndex="1" />
                               <CheckBox fx:id="nativestp" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <Spinner fx:id="dockercnt" editable="true" prefHeight="26.0" prefWidth="66.0" GridPane.columnIndex="1" />
+                              <CheckBox fx:id="usephilips" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label text="Use Philips format for STPtoXML" GridPane.rowIndex="2" />
                            </children>
                         </GridPane>
                         <ButtonBar layoutX="75.0" layoutY="397.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
