--- a/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/primary.fxml
+++ b/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/primary.fxml
@@ -41,6 +41,7 @@
                             <TableColumn fx:id="filecol" minWidth="75.0" prefWidth="-1.0" text="File" />
                               <TableColumn fx:id="startedcol" minWidth="75.0" prefWidth="-1.0" text="Started" />
                               <TableColumn fx:id="endedcol" minWidth="75.0" prefWidth="-1.0" text="Ended" />
+                              <TableColumn fx:id="messagecol" prefWidth="75.0" text="Message" />
                           </columns>
                         </TableView>
                      </children>
