--- a/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/primary.fxml
+++ b/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/primary.fxml
@@ -24,7 +24,8 @@
             <Button fx:id="primaryButton" onAction="#switchToSecondary" text="Switch to Secondary View" />
             <Button mnemonicParsing="false" onAction="#addDir" text="Add Directory to Worklist" />
             <Button mnemonicParsing="false" onAction="#addFiles" text="Add File(s) to Worklist" />
-            <Button mnemonicParsing="false" onAction="#convert" text="Run!" />
+            <Button mnemonicParsing="false" onAction="#convertAll" text="Run All" />
+            <Button mnemonicParsing="false" onAction="#convertSelected" text="Run Selected" />
         </items>
       </ToolBar>
    </top>
@@ -45,6 +46,7 @@
                               <TableColumn fx:id="endedcol" minWidth="75.0" prefWidth="-1.0" text="Ended" />
                               <TableColumn fx:id="messagecol" prefWidth="75.0" text="Message" visible="false" />
                               <TableColumn fx:id="containercol" prefWidth="75.0" text="Container" visible="false" />
+                              <TableColumn fx:id="outputcol" prefWidth="75.0" text="Output Dir" visible="false" />
                           </columns>
                         </TableView>
                      </children>
@@ -60,16 +62,17 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <GridPane alignment="TOP_CENTER" hgap="20.0" layoutX="94.0" layoutY="113.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                        <GridPane alignment="TOP_CENTER" hgap="20.0" layoutX="64.0" layoutY="113.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="197.0" prefWidth="915.0" AnchorPane.leftAnchor="32.0" AnchorPane.rightAnchor="32.0" AnchorPane.topAnchor="16.0">
                           <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="330.0" minWidth="10.0" prefWidth="262.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="416.0" minWidth="10.0" prefWidth="369.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="150.0" prefWidth="269.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="671.0" />
                           </columnConstraints>
                           <rowConstraints>
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
@@ -83,6 +86,22 @@
                               <Spinner fx:id="durationtimer" editable="true" prefHeight="26.0" prefWidth="148.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                               <CheckBox fx:id="removecontainers" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <Label text="Remove Docker Containers on Success" GridPane.rowIndex="1" />
+                              <Label text="Output Directory" GridPane.rowIndex="5" />
+                              <GridPane hgap="5.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                                 <columnConstraints>
+                                    <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="452.0" />
+                                    <ColumnConstraints maxWidth="431.0" minWidth="10.0" prefWidth="74.0" />
+                                    <ColumnConstraints maxWidth="224.0" minWidth="10.0" prefWidth="90.0" />
+                                 </columnConstraints>
+                                 <rowConstraints>
+                                    <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                                 </rowConstraints>
+                                 <children>
+                                    <Button mnemonicParsing="false" onAction="#setOutputFromInput" text="From Input" GridPane.columnIndex="2" />
+                                    <Button mnemonicParsing="false" onAction="#selectOutputDir" text="Choose" GridPane.columnIndex="1" />
+                                    <Label fx:id="outputlbl" maxWidth="1.7976931348623157E308" prefHeight="16.0" prefWidth="58.0" GridPane.hgrow="ALWAYS" />
+                                 </children>
+                              </GridPane>
                            </children>
                         </GridPane>
                         <ButtonBar layoutX="75.0" layoutY="397.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
