--- a/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/primary.fxml
+++ b/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/primary.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -36,19 +37,23 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView fx:id="table" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                          <columns>
-                            <TableColumn fx:id="statuscol" minWidth="75.0" prefWidth="-1.0" text="Status" />
-                            <TableColumn fx:id="filecol" minWidth="75.0" prefWidth="-1.0" text="File" />
-                              <TableColumn fx:id="sizecol" prefWidth="75.0" text="Size (KB)" />
-                              <TableColumn fx:id="typecol" prefWidth="75.0" text="Type" visible="false" />
-                              <TableColumn fx:id="startedcol" minWidth="75.0" prefWidth="-1.0" text="Started" />
-                              <TableColumn fx:id="endedcol" minWidth="75.0" prefWidth="-1.0" text="Ended" />
-                              <TableColumn fx:id="messagecol" prefWidth="75.0" text="Message" visible="false" />
-                              <TableColumn fx:id="containercol" prefWidth="75.0" text="Container" visible="false" />
-                              <TableColumn fx:id="outputcol" prefWidth="75.0" text="Output Dir" visible="false" />
-                          </columns>
-                        </TableView>
+                        <SplitPane fx:id="splitter" orientation="VERTICAL" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <items>
+                              <TableView fx:id="table" tableMenuButtonVisible="true">
+                                <columns>
+                                  <TableColumn fx:id="statuscol" minWidth="75.0" prefWidth="-1.0" text="Status" />
+                                  <TableColumn fx:id="filecol" minWidth="75.0" prefWidth="-1.0" text="File" />
+                                    <TableColumn fx:id="sizecol" prefWidth="75.0" text="Size (KB)" />
+                                    <TableColumn fx:id="typecol" prefWidth="75.0" text="Type" visible="false" />
+                                    <TableColumn fx:id="startedcol" minWidth="75.0" prefWidth="-1.0" text="Started" />
+                                    <TableColumn fx:id="endedcol" minWidth="75.0" prefWidth="-1.0" text="Ended" />
+                                    <TableColumn fx:id="messagecol" prefWidth="75.0" text="Message" visible="false" />
+                                    <TableColumn fx:id="containercol" prefWidth="75.0" text="Container" visible="false" />
+                                    <TableColumn fx:id="outputcol" prefWidth="75.0" text="Output Dir" visible="false" />
+                                </columns>
+                              </TableView>
+                           </items>
+                        </SplitPane>
                      </children>
                   </AnchorPane>
             </content>
