--- a/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/workitementry.fxml
+++ b/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/workitementry.fxml
@@ -1,22 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="com.ostrichemulators.prevent.WorkItemEntryController">
+<AnchorPane id="AnchorPane" minHeight="0.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ostrichemulators.prevent.WorkItemEntryController">
    <children>
-      <BorderPane prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <bottom>
-            <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-              <buttons>
-                <Button fx:id="cancelbtn" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
-                  <Button fx:id="savebtn" mnemonicParsing="false" onAction="#save" text="Save" />
-              </buttons>
-            </ButtonBar>
-         </bottom>
-      </BorderPane>
+      <Label fx:id="txtlbl" layoutX="23.0" layoutY="153.0" prefHeight="16.0" prefWidth="532.0" text="Label" />
    </children>
 </AnchorPane>
