--- a/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/workitementry.fxml
+++ b/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/workitementry.fxml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 
 <AnchorPane id="AnchorPane" minHeight="0.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ostrichemulators.prevent.WorkItemEntryController">
    <children>
-      <Label fx:id="txtlbl" layoutX="23.0" layoutY="153.0" prefHeight="16.0" prefWidth="532.0" text="Label" />
+      <Label fx:id="txtlbl" layoutX="5.0" layoutY="14.0" prefHeight="16.0" prefWidth="553.0" text="Label" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
+      <HBox layoutX="10.0" layoutY="26.0" prefHeight="30.0" prefWidth="200.0" spacing="5.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#showOutput" prefWidth="65.0" text="Output" />
+            <Button mnemonicParsing="false" onAction="#showErrors" prefWidth="65.0" text="Error" />
+            <Button mnemonicParsing="false" onAction="#showStp" prefWidth="65.0" text="STP" />
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
