--- a/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/primary.fxml
+++ b/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/primary.fxml
@@ -5,16 +5,19 @@
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
@@ -73,6 +76,7 @@
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="671.0" />
                           </columnConstraints>
                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -81,18 +85,18 @@
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <Label text="Max. Docker Containers" />
-                              <Label text="Use Native STP Parser (experimental)" GridPane.rowIndex="2" />
-                              <CheckBox fx:id="nativestp" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <Spinner fx:id="dockercnt" editable="true" prefHeight="26.0" prefWidth="66.0" GridPane.columnIndex="1" />
-                              <CheckBox fx:id="usephilips" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                              <Label text="Use Philips format for STPtoXML" GridPane.rowIndex="3" />
-                              <Label text="Max. Conversion Duration" GridPane.rowIndex="4" />
-                              <Spinner fx:id="durationtimer" editable="true" prefHeight="26.0" prefWidth="148.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                              <CheckBox fx:id="removecontainers" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <Label text="Remove Docker Containers on Success" GridPane.rowIndex="1" />
-                              <Label text="Output Directory" GridPane.rowIndex="5" />
-                              <GridPane hgap="5.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                              <Label text="Max. Docker Containers" GridPane.rowIndex="1" />
+                              <Label text="Use Native STP Parser (experimental)" GridPane.rowIndex="3" />
+                              <CheckBox fx:id="nativestp" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <Spinner fx:id="dockercnt" disable="true" editable="true" prefHeight="26.0" prefWidth="66.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <CheckBox fx:id="usephilips" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <Label text="Use Philips format for STPtoXML" GridPane.rowIndex="4" />
+                              <Label text="Max. Conversion Duration" GridPane.rowIndex="5" />
+                              <Spinner fx:id="durationtimer" editable="true" prefHeight="26.0" prefWidth="148.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <CheckBox fx:id="removecontainers" disable="true" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label text="Remove Docker Containers on Success" GridPane.rowIndex="2" />
+                              <Label text="Output Directory" GridPane.rowIndex="6" />
+                              <GridPane hgap="5.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                                  <columnConstraints>
                                     <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="452.0" />
                                     <ColumnConstraints maxWidth="431.0" minWidth="10.0" prefWidth="74.0" />
@@ -107,6 +111,17 @@
                                     <Label fx:id="outputlbl" maxWidth="1.7976931348623157E308" prefHeight="16.0" prefWidth="58.0" GridPane.hgrow="ALWAYS" />
                                  </children>
                               </GridPane>
+                              <Label text="Conversion Method" />
+                              <FlowPane hgap="25.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+                                 <children>
+                                    <RadioButton fx:id="nativeconverter" mnemonicParsing="false" selected="true" text="Native">
+                                       <toggleGroup>
+                                          <ToggleGroup fx:id="Converter" />
+                                       </toggleGroup>
+                                    </RadioButton>
+                                    <RadioButton fx:id="dockerconverter" mnemonicParsing="false" text="Docker" toggleGroup="$Converter" />
+                                 </children>
+                              </FlowPane>
                            </children>
                         </GridPane>
                         <ButtonBar layoutX="75.0" layoutY="397.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
