--- a/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/primary.fxml
+++ b/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/primary.fxml
@@ -70,7 +70,7 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <GridPane alignment="TOP_CENTER" hgap="20.0" layoutX="64.0" layoutY="113.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="197.0" prefWidth="915.0" AnchorPane.leftAnchor="32.0" AnchorPane.rightAnchor="32.0" AnchorPane.topAnchor="16.0">
+                        <GridPane alignment="TOP_CENTER" hgap="20.0" layoutX="64.0" layoutY="113.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="223.0" prefWidth="964.0" AnchorPane.leftAnchor="32.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="16.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="150.0" prefWidth="269.0" />
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="671.0" />
@@ -83,12 +83,13 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <Label text="Max. Docker Containers" GridPane.rowIndex="1" />
+                              <Label text="Max. Simultaneous Conversions" GridPane.rowIndex="1" />
                               <Label text="Use Native STP Parser (experimental)" GridPane.rowIndex="3" />
                               <CheckBox fx:id="nativestp" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                              <Spinner fx:id="dockercnt" disable="true" editable="true" prefHeight="26.0" prefWidth="66.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <Spinner fx:id="dockercnt" editable="true" prefHeight="26.0" prefWidth="66.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <CheckBox fx:id="usephilips" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                               <Label text="Use Philips format for STPtoXML" GridPane.rowIndex="4" />
                               <Label text="Max. Conversion Duration" GridPane.rowIndex="5" />
@@ -122,6 +123,20 @@
                                     <RadioButton fx:id="dockerconverter" mnemonicParsing="false" text="Docker" toggleGroup="$Converter" />
                                  </children>
                               </FlowPane>
+                              <Label text="Log Directory" GridPane.rowIndex="7" />
+                              <GridPane GridPane.columnIndex="1" GridPane.rowIndex="7">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="540.0" minWidth="10.0" prefWidth="504.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="328.0" minWidth="10.0" prefWidth="169.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Label fx:id="loglbl" maxWidth="1.7976931348623157E308" prefHeight="16.0" prefWidth="56.0" />
+                                    <Button mnemonicParsing="false" onAction="#selectLogDir" prefHeight="26.0" prefWidth="67.0" text="Choose" GridPane.columnIndex="1" />
+                                 </children>
+                              </GridPane>
                            </children>
                         </GridPane>
                         <ButtonBar layoutX="75.0" layoutY="397.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
