--- a/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/workitementry.fxml
+++ b/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/workitementry.fxml
@@ -1,19 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 
 <AnchorPane id="AnchorPane" minHeight="0.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ostrichemulators.prevent.WorkItemEntryController">
    <children>
-      <Label fx:id="txtlbl" layoutX="5.0" layoutY="14.0" prefHeight="16.0" prefWidth="553.0" text="Label" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
-      <HBox layoutX="10.0" layoutY="26.0" prefHeight="30.0" prefWidth="200.0" spacing="5.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
-         <children>
-            <Button mnemonicParsing="false" onAction="#showOutput" prefWidth="65.0" text="Output" />
-            <Button mnemonicParsing="false" onAction="#showErrors" prefWidth="65.0" text="Error" />
-            <Button mnemonicParsing="false" onAction="#showStp" prefWidth="65.0" text="STP" />
-         </children>
-      </HBox>
+      <BorderPane layoutX="10.0" layoutY="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+         <top>
+            <Label fx:id="txtlbl" text="Label" BorderPane.alignment="CENTER" />
+         </top>
+         <left>
+            <VBox spacing="10.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#showOutput" prefWidth="65.0" text="Output">
+                     <VBox.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#showErrors" prefWidth="65.0" text="Error">
+                     <VBox.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#showStp" prefWidth="65.0" text="STP">
+                     <VBox.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+            </VBox>
+         </left>
+         <center>
+            <ListView fx:id="listview" BorderPane.alignment="CENTER" />
+         </center>
+      </BorderPane>
    </children>
 </AnchorPane>
