--- a/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/workitementry.fxml
+++ b/docker/frontend/PreVentDataCenter/src/main/resources/com/ostrichemulators/prevent/workitementry.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
@@ -17,19 +19,27 @@
          <left>
             <VBox spacing="10.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button mnemonicParsing="false" onAction="#showOutput" prefWidth="65.0" text="Output">
+                  <ToggleButton fx:id="outbtn" mnemonicParsing="false" onAction="#showOutput" prefWidth="70.0" text="Output">
                      <VBox.margin>
                         <Insets left="10.0" right="10.0" />
                      </VBox.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#showErrors" prefWidth="65.0" text="Error">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="toggler" />
+                     </toggleGroup>
+                  </ToggleButton>
+                  <ToggleButton fx:id="errbtn" mnemonicParsing="false" onAction="#showErrors" prefWidth="70.0" text="Error" toggleGroup="$toggler">
                      <VBox.margin>
                         <Insets left="10.0" right="10.0" />
                      </VBox.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#showStp" prefWidth="65.0" text="STP">
+                  </ToggleButton>
+                  <ToggleButton fx:id="stpbtn" mnemonicParsing="false" onAction="#showStp" prefWidth="70.0" text="STP" toggleGroup="$toggler">
                      <VBox.margin>
                         <Insets left="10.0" right="10.0" />
+                     </VBox.margin>
+                  </ToggleButton>
+                  <Button mnemonicParsing="false" onAction="#refreshBtns" prefWidth="70.0" text="Refresh">
+                     <VBox.margin>
+                        <Insets left="10.0" right="10.0" top="50.0" />
                      </VBox.margin>
                   </Button>
                </children>
